// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformOas3Operation callback 1`] = `
Object {
  "callbacks": Array [
    Object {
      "callbackName": "myCallback",
      "extensions": Object {},
      "id": "?http-operation-id?",
      "iid": "cbId",
      "method": "post",
      "path": "http://example.com?transactionId={$request.body#/id}",
      "request": Object {
        "body": Object {
          "contents": Array [],
        },
        "cookie": Array [],
        "headers": Array [],
        "path": Array [],
        "query": Array [],
      },
      "responses": Array [],
      "security": Array [],
      "servers": Array [],
      "tags": Array [],
    },
  ],
  "extensions": Object {},
  "id": "?http-operation-id?",
  "iid": "opid",
  "method": "post",
  "path": "/subscribe",
  "request": Object {
    "body": Object {
      "contents": Array [
        Object {
          "encodings": Array [],
          "examples": Array [],
          "mediaType": "application/json",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "properties": Object {
              "id": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
      ],
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [],
  "tags": Array [],
}
`;

exports[`transformOas3Operation given no tags should translate operation with empty tags array 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": "#/paths/~1users~1{userId}/get",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
      "id": "#/paths/~1users~1{userId}/get/requestBody",
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [],
  "summary": "summary",
  "tags": Array [],
}
`;

exports[`transformOas3Operation given operation servers should translate operation with those servers 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": "#/paths/~1users~1{userId}/get",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
      "id": "#/paths/~1users~1{userId}/get/requestBody",
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [
    Object {
      "id": "#/paths/~1users~1{userId}/get/servers/0",
      "name": "title",
      "url": "operation/server",
    },
  ],
  "summary": "summary",
  "tags": Array [],
}
`;

exports[`transformOas3Operation given path servers should translate operation with those servers 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": "#/paths/~1users~1{userId}/get",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
      "id": "#/paths/~1users~1{userId}/get/requestBody",
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [
    Object {
      "id": "#/paths/~1users~1{userId}/servers/0",
      "name": "title",
      "url": "path/server",
    },
  ],
  "summary": "summary",
  "tags": Array [],
}
`;

exports[`transformOas3Operation given some tags should translate operation with those tags 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": "#/paths/~1users~1{userId}/get",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
      "id": "#/paths/~1users~1{userId}/get/requestBody",
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [],
  "summary": "summary",
  "tags": Array [
    Object {
      "id": "#/paths/~1users~1{userId}/get/tags/0",
      "name": "tag1",
    },
  ],
}
`;

exports[`transformOas3Operation given spec servers should translate operation with those servers 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": "#/paths/~1users~1{userId}/get",
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "body": Object {
      "contents": Array [],
      "id": "#/paths/~1users~1{userId}/get/requestBody",
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "servers": Array [
    Object {
      "id": "#/servers/0",
      "name": "title",
      "url": "spec/server",
    },
  ],
  "summary": "summary",
  "tags": Array [],
}
`;
